# Embedded_Prac_Rpi4

./: arm64_packages.txt
H265/: hevc_decode  main.c
rpi-cross/3D/: CMakeLists.txt
rpi-cross/rpi-animation/: CMakeLists.txt
rpi-cross/rpi-animation/build_jet/: CMakeLists.txt  animation.cpp  cross-arm64.cmake
rpi-cross/rpi-animation/build_jet/sysroot/include/SDL2/: SDL_config.h  SDL_revision.h
rpi-cross/rpi-animation/build_jet/sysroot/lib/: libSDL2-2.0.so.0.3300.0
rpi-cross/rpi-animation/build_jet/sysroot/lib/cmake/SDL2/: SDL2Targets-noconfig.cmake
rpi-cross/rpi-animation/build_jet/sysroot/lib/pkgconfig/: sdl2.pc
rpi-cross/rpi-sysroot/lib/: libEGL.so.1.0.0  libGLESv1_CM.so.1.1.0  libGLESv2.so.2.0.0  libgbm.so.1.0.0  libglapi.so.0.0.0
rpi-cross/rpi-sysroot/lib/pkgconfig/: dri.pc  egl.pc  gbm.pc  glesv1_cm.pc  glesv2.pc  zlib.pc
rpi-cross/vulkan/: CMakeLists.txt  main.cpp
rpi-sysroot/lib/cmake/SDL2_image/: SDL2_image-static-targets.cmake
rpi-sysroot/usr/include/: x264_config.h
rpi-sysroot/usr/include/SDL2/: SDL_config.h
rpi-sysroot/usr/lib/: libEGL.so.1.0.0  libGLESv1_CM.so.1.1.0  libGLESv2.so.2.0.0  libSDL2-2.0.so.0.3300.0  libexpat.so.1.6.7  libgbm.so.1.0.0  libglapi.so.0.0.0  libx264.so.164  libx265.so.215
rpi-sysroot/usr/lib/cmake/SDL2_image/: SDL2_image-static-targets-noconfig.cmake
rpi-sysroot/usr/lib/pkgconfig/: SDL2_image.pc  dri.pc  egl.pc  gbm.pc  glesv1_cm.pc  glesv2.pc  sdl2.pc  x264.pc  x265.pc  zlib.pc
